# simple-video-streaming-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cert.pem  key.pem  main.cpp  run.sh
src/: main.cpp
src/app/: app.cpp  app.h
src/httpserver/: server.h
src/httpserver/basicauth/: basicauth.cpp  basicauth.h
src/streamparser/: streamparser.cpp  streamparser.h
src/streamstore/: streamstore.cpp  streamstore.h
streamingserver/: index.js  package.json
