cmake_minimum_required(VERSION 2.8)
project( video-streaming-app )
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package( OpenCV REQUIRED )
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost REQUIRED) 
include_directories(${Boost_INCLUDE_DIRS}) 
find_package(OpenSSL REQUIRED)
add_executable( video-streaming-app src/main.cpp src/app/app.cpp src/streamparser/streamparser.cpp src/streamstore/streamstore.cpp)
target_link_libraries( video-streaming-app ${OpenCV_LIBS} ${Boost_LIBS} ${OpenSSL_LIBS})